@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>473</width>
+    <width>361</width>
     <height>347</height>
    </rect>
   </property>
@@ -20,66 +20,20 @@
   <property name="windowTitle" >
    <string/>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QVBoxLayout" >
    <property name="margin" >
-    <number>9</number>
+    <number>0</number>
    </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>2</number>
    </property>
-   <item row="4" column="0" colspan="4" >
-    <widget class="QCheckBox" name="makeBackupChk" >
-     <property name="text" >
-      <string>Make backup copy when save file</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="4" >
-    <widget class="QCheckBox" name="singleInstanceChk" >
-     <property name="toolTip" >
-      <string>Use existing instance of application when open files</string>
-     </property>
-     <property name="text" >
-      <string>Open files in existing instance</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="3" >
-    <widget class="QSpinBox" name="autoSaveIntervalSpin" >
-     <property name="enabled" >
-      <bool>false</bool>
-     </property>
-     <property name="suffix" >
-      <string> minute(s)</string>
-     </property>
-     <property name="prefix" >
-      <string/>
-     </property>
-     <property name="maximum" >
-      <number>30</number>
-     </property>
-     <property name="minimum" >
-      <number>1</number>
-     </property>
-     <property name="value" >
-      <number>2</number>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2" >
-    <widget class="QCheckBox" name="saveSessionChk" >
-     <property name="text" >
-      <string>Save session when close</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="4" >
+   <item>
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>0</number>
      </property>
      <property name="spacing" >
-      <number>6</number>
+      <number>2</number>
      </property>
      <item row="2" column="1" >
       <widget class="QRadioButton" name="openEmptySessionBtn" >
@@ -132,7 +86,90 @@
      </item>
     </layout>
    </item>
-   <item row="6" column="1" colspan="3" >
+   <item>
+    <widget class="QCheckBox" name="saveSessionChk" >
+     <property name="text" >
+      <string>Save session when close</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="syncOpenDlgChk" >
+     <property name="text" >
+      <string>Sync 'Open' dialog to current doc's dir</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="singleInstanceChk" >
+     <property name="toolTip" >
+      <string>Use existing instance of application when open files</string>
+     </property>
+     <property name="text" >
+      <string>Open files in existing instance</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="makeBackupChk" >
+     <property name="text" >
+      <string>Make backup copy when save file</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>2</number>
+     </property>
+     <item>
+      <widget class="QCheckBox" name="autoSaveChk" >
+       <property name="text" >
+        <string>Auto save every</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="autoSaveIntervalSpin" >
+       <property name="enabled" >
+        <bool>false</bool>
+       </property>
+       <property name="suffix" >
+        <string> minute(s)</string>
+       </property>
+       <property name="prefix" >
+        <string/>
+       </property>
+       <property name="maximum" >
+        <number>30</number>
+       </property>
+       <property name="minimum" >
+        <number>1</number>
+       </property>
+       <property name="value" >
+        <number>2</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
@@ -144,33 +181,6 @@
       </size>
      </property>
     </spacer>
-   </item>
-   <item row="5" column="0" >
-    <widget class="QCheckBox" name="autoSaveChk" >
-     <property name="text" >
-      <string>Auto save every</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="2" >
-    <spacer>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" >
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="2" column="0" >
-    <widget class="QCheckBox" name="syncOpenDlgChk" >
-     <property name="text" >
-      <string>Sync 'Open' dialog to current doc's dir</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
