@@ -1,3 +1,9 @@
+2008-09-05:
+* Added: settings page for autocompletion
+
+2008-08-28:
+* Fixed: restoring cursor position after reloading
+
 2008-08-25:
 * Added: copying of installed API files to user's dir (if 
   they don't exist yet)
